          call defaults to 'primary' (i.e. when invoked with bare values)
        - Throw much clearer error on incorrect inflation spec
        - Fix incorrect storage behavior when first call on a fresh schema
          is with_deferred_fk_checks
        - Fix incorrect dependency on Test::Simple/Builder (RT#72282)
        - Fix uninitialized warning in ::Storage::Sybase::ASE

    * Misc
        - No longer depend on Variable::Magic now that a pure-perl
          namespace::clean is available

0.08195 2011-07-27 16:20 (UTC)
    * Fixes
        - Fix horrible oversight in the Oracle sqlmaker when dealing with
          queries updating blobs (RT#69829)

0.08194 2011-07-20 16:10 (UTC)
    * Fixes
        - Fix $rs->populate([]) to be a no-op rather than an exception
        - Overhaul t/53lean_startup.t to better dodge false positives
        - Stop Data::Compare from loading random plugins
        - Oracle: Recalculate LOB bind indices for UPDATE with LOBs in WHERE
          (RT#69548)

0.08193 2011-07-14 17:00 (UTC)
    * New Features / Changes
        - Allow schema cloning to mutate attributes
        - DBIC now attempts more aggressive de-duplication of where
          conditions on resultset chaining
        - The Ordered component is now smarter wrt reordering of dirty
          objects, and does its job with less storage queries
        - Logging via DBIC_TRACE=1=<filename> no longer overwrites the
          logfile on every program startup, appending loglines instead

    * Fixes
        - Fix issue where the query was becoming overly mangled when trying
          to use pagination with a query that has a sub-select in the WHERE
          clause
        - Fix possible incorrect pagination on Oracle, when a resultset
          is not ordered by a unique column
        - Revert "Fix incorrect signature of the default sqlt_deploy_hook"
          from 0.08191 - documentation was in fact incorrect, not the code