@@ -10,6 +10,8 @@ Revision history for DBIx::Class
           is with_deferred_fk_checks
         - Fix incorrect dependency on Test::Simple/Builder (RT#72282)
         - Fix uninitialized warning in ::Storage::Sybase::ASE
+        - Improve/cache  DBD-specific datatype bind checks (also solves a
+          nasty memleak with version.pm on multiple ->VERSION invocations)
 
     * Misc
         - No longer depend on Variable::Magic now that a pure-perl
